Added one more case

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.qa.tests.ApiTesting1.validatetype</td></tr>
+<tr><td>com.qa.tests.ApiTesting1.validatedaPlaceId</td></tr>
+<tr><td>com.qa.tests.ApiTesting1.validatedateinquery</td></tr>
 </table>
